{
    "name": "Controls",
    "maps": [
        {
            "name": "Touch",
            "id": "ce2465cd-939e-45ba-9100-72ce72faecf2",
            "actions": [
                {
                    "name": "Finger1Pos",
                    "type": "Value",
                    "id": "f64fddec-50df-4412-baaa-32f91f20a782",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger2Pos",
                    "type": "Value",
                    "id": "0dd92071-d434-4ead-b66b-06a0a5011790",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TwoFingersContact",
                    "type": "Button",
                    "id": "dc6b12ef-5237-45d1-b9c5-d95a0760ed76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "41e74722-e74a-4764-a974-0ad07fcdbd0c",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger1Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14cd37ce-5053-4981-ba45-e0cd575da61d",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger2Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f195b0f-0eee-43d1-856d-99ee18188f68",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TwoFingersContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "9e07e058-d190-4232-b995-e752dcd1e83a",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "77bf27ed-1db4-4cbe-839d-fa6a96d8b74b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71e55119-bff5-4f1c-959f-4a9e3d255b92",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}